Ignoring setting.ini

--- a/output/setting.ini
+++ b/output/setting.ini
@@ -16,7 +16,7 @@ CharacterNameToLogin=Caidin Moss
 
 [OmniEve]
 AppDomainToCreateForOmniEve=Q1
-PathToOmniEveEXE=C:\Users\tjuckett\Documents\GitHub\OmniEve\output\OmniEve.exe
+PathToOmniEveEXE=C:\Users\Tim\Documents\GitHub\OmniEve\output\OmniEve.exe
 StandAloneInstance=true
 ;Note: this does not and will not restart the EVE client! - this is for debug purposes NOT for session management
 RestartOmniEveIfClosed=false 
