Fixes to Direct Eve and more features in the market analyzer

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\OmniEve\packages.config" />
   <repository path="..\OmniEveLoader\packages.config" />
+  <repository path="..\OmniEveMarket\packages.config" />
 </repositories>
