--- a/OmniEveMarket/OmniEveMarket.csproj
+++ b/OmniEveMarket/OmniEveMarket.csproj
@@ -41,6 +41,9 @@
     <Reference Include="MetroFramework.Fonts">
       <HintPath>..\packages\MetroFramework-1.3.0.0.1.3.0.0\lib\MetroFramework.Fonts.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,16 +56,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analysis\BuySellOrders.cs" />
+    <Compile Include="Analysis\CreateBuyOrder.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="JsonTypes.cs" />
+    <Compile Include="Logging.cs" />
+    <Compile Include="MarketStats.cs" />
     <Compile Include="OmniEveMarketUI.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="OmniEveMarketUI.Designer.cs">
       <DependentUpon>OmniEveMarketUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Order.cs" />
     <Compile Include="PriceHistory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuickLook.cs" />
     <EmbeddedResource Include="OmniEveMarketUI.resx">
       <DependentUpon>OmniEveMarketUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +85,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -91,7 +102,9 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetDir)$(ProjectName).exe" "$(ProjectDir)..\output\$(ProjectName).exe"
-copy /Y "$(TargetDir)MetroFramework.dll" "$(ProjectDir)..\output\MetroFramework.dll"</PostBuildEvent>
+copy /Y "$(TargetDir)MetroFramework.dll" "$(ProjectDir)..\output\MetroFramework.dll"
+copy /Y "$(TargetDir)Newtonsoft.Json.dll" "$(ProjectDir)..\output\Newtonsoft.Json.dll"
+copy /Y "$(TargetDir)Newtonsoft.Json.xml" "$(ProjectDir)..\output\Newtonsoft.Json.xml"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
