--- a/OmniEveModules/OmniEveModules.csproj
+++ b/OmniEveModules/OmniEveModules.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Actions\Action.cs" />
     <Compile Include="Actions\Buy.cs" />
+    <Compile Include="Actions\Inventory.cs" />
     <Compile Include="Actions\MyOrders.cs" />
     <Compile Include="Actions\MarketInfo.cs" />
     <Compile Include="Actions\Sell.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Lookup\Time.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\BuyState.cs" />
+    <Compile Include="States\InventoryState.cs" />
     <Compile Include="States\MyOrdersState.cs" />
     <Compile Include="States\OmniEveState.cs" />
     <Compile Include="States\MarketInfoState.cs" />
