--- a/OmniEveModules/OmniEveModules.csproj
+++ b/OmniEveModules/OmniEveModules.csproj
@@ -53,21 +53,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actions\Action.cs" />
-    <Compile Include="Actions\Buy.cs" />
-    <Compile Include="Actions\ItemHanger.cs" />
-    <Compile Include="Actions\MyOrders.cs" />
-    <Compile Include="Actions\MarketInfo.cs" />
-    <Compile Include="Actions\Sell.cs" />
-    <Compile Include="Actions\ModifyOrder.cs" />
+    <Compile Include="Scripts\IScript.cs" />
+    <Compile Include="Scripts\Buy.cs" />
+    <Compile Include="Scripts\ItemHanger.cs" />
+    <Compile Include="Scripts\MyOrders.cs" />
+    <Compile Include="Scripts\MarketInfo.cs" />
+    <Compile Include="Scripts\Sell.cs" />
+    <Compile Include="Scripts\ModifyOrder.cs" />
     <Compile Include="Caching\Cache.cs" />
-    <Compile Include="Caching\MarketItemInfo.cs" />
+    <Compile Include="Caching\MarketItem.cs" />
     <Compile Include="Logging\ControlWriter.cs" />
     <Compile Include="Logging\Logging.cs" />
     <Compile Include="Lookup\Time.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\ModifyAllOrders.cs" />
     <Compile Include="States\BuyState.cs" />
     <Compile Include="States\ItemHangerState.cs" />
+    <Compile Include="States\ModifyAllOrdersState.cs" />
     <Compile Include="States\MyOrdersState.cs" />
     <Compile Include="States\OmniEveState.cs" />
     <Compile Include="States\MarketInfoState.cs" />
