--- a/OmniEveModules/OmniEveModules.csproj
+++ b/OmniEveModules/OmniEveModules.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Scripts\IScript.cs" />
     <Compile Include="Scripts\Buy.cs" />
     <Compile Include="Scripts\ItemHanger.cs" />
+    <Compile Include="Scripts\MarketInfoForList.cs" />
     <Compile Include="Scripts\MyOrders.cs" />
     <Compile Include="Scripts\MarketInfo.cs" />
     <Compile Include="Scripts\Sell.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Scripts\ModifyAllOrders.cs" />
     <Compile Include="States\BuyState.cs" />
     <Compile Include="States\ItemHangerState.cs" />
+    <Compile Include="States\MarketInfoForListState.cs" />
     <Compile Include="States\ModifyAllOrdersState.cs" />
     <Compile Include="States\MyOrdersState.cs" />
     <Compile Include="States\OmniEveState.cs" />
