--- a/OmniEveModules/OmniEveModules.csproj
+++ b/OmniEveModules/OmniEveModules.csproj
@@ -68,15 +68,8 @@
     <Compile Include="Lookup\Time.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\ModifyAllOrders.cs" />
-    <Compile Include="States\BuyState.cs" />
-    <Compile Include="States\ItemHangerState.cs" />
-    <Compile Include="States\MarketInfoForListState.cs" />
-    <Compile Include="States\ModifyAllOrdersState.cs" />
-    <Compile Include="States\MyOrdersState.cs" />
+    <Compile Include="Scripts\SellItems.cs" />
     <Compile Include="States\OmniEveState.cs" />
-    <Compile Include="States\MarketInfoState.cs" />
-    <Compile Include="States\SellState.cs" />
-    <Compile Include="States\ModifyOrderState.cs" />
     <Compile Include="Scripts\UpdateAllOrders.cs" />
     <Compile Include="Status\Status.cs" />
   </ItemGroup>
