Making the market tool more awesome

--- a/OmniEveMarket/Properties/Settings.settings
+++ b/OmniEveMarket/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="MinProfit" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="MinVolume" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="MinOrders" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
