--- a/OmniEveModules/OmniEveModules.csproj
+++ b/OmniEveModules/OmniEveModules.csproj
@@ -59,7 +59,6 @@
     <Compile Include="Scripts\MarketInfoForList.cs" />
     <Compile Include="Scripts\MyOrders.cs" />
     <Compile Include="Scripts\MarketInfo.cs" />
-    <Compile Include="Scripts\Sell.cs" />
     <Compile Include="Scripts\ModifyOrder.cs" />
     <Compile Include="Caching\Cache.cs" />
     <Compile Include="Caching\MarketItem.cs" />
@@ -68,6 +67,7 @@
     <Compile Include="Lookup\Time.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\ModifyAllOrders.cs" />
+    <Compile Include="Scripts\SellItem.cs" />
     <Compile Include="Scripts\SellItems.cs" />
     <Compile Include="States\OmniEveState.cs" />
     <Compile Include="Scripts\UpdateAllOrders.cs" />
